# transcriber

./: README.md  main.py  pyproject.toml  requirements.txt  test_whisper_hf.py
