[tool.poetry]
authors = [
  "Maksym Sevkovych <m.sevkovych@web.de>",
]
description = "Transcribe audio files"
name = "transcriber"
version = "0.0.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
datasets = "^2.10.0" 
isort = "^5.12.0"
moviepy = "^1.0.3"
torch = "^2.0.0" 
transformers = "^4.32.0"
faster-whisper = "^0.9.0"
pyannote-audio = "^3.1.0"
pydub = "^0.25.1"


[build-system]
build-backend = "poetry_dynamic_versioning.backend"
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning", "wheel"]